--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,21 +11,21 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: ^0.20.2
+  intl: ^0.19.0
   cupertino_icons: ^1.0.8
   flutter_riverpod: ^2.5.1
   google_mobile_ads: ^5.1.0
   flutter_secure_storage: ^9.0.0
-  shared_preferences: ^2.5.3
+  shared_preferences: ^2.2.2
   freezed_annotation: ^2.4.2
   json_annotation: ^4.9.0
   package_info_plus: ^8.0.0
-  tutorial_coach_mark: ^1.3.3
+  tutorial_coach_mark: 1.2.11
   cryptography: ^2.7.0
   dio: ^5.4.0
   google_fonts: ^6.1.0
   equatable: ^2.0.7
-  characters: ^1.4.0
+#  characters: ^1.4.0
   http: ^1.2.1
   web_socket_channel: ^2.4.0
   csv: ^5.0.2
@@ -40,7 +40,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^4.0.0
   build_runner: ^2.4.7
   flutter_gen_runner: ^5.3.2
   freezed: ^2.4.2
@@ -52,6 +52,7 @@ flutter:
   generate: true
   
   assets:
+    - assets/vpn/myserver.ovpn
     - assets/reference/
     - assets/CountryFlags/
     - assets/
