--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -150,6 +150,12 @@ android {
             useLegacyPackaging true
         }
     }
+
+    externalNativeBuild {
+        cmake {
+            path "src/main/cpp/CMakeLists.txt"
+        }
+    }
 }
 
 flutter {
