--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -59,6 +59,16 @@
             </intent-filter>
         </service>
 
+        <!-- SoftEther VPNService (skeleton) -->
+        <service
+            android:name=".SoftEtherVpnService"
+            android:permission="android.permission.BIND_VPN_SERVICE"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.net.VpnService" />
+            </intent-filter>
+        </service>
+
         <service
             android:name=".vpn.HiVpnTileService"
             android:label="HiVPN"
